<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_uploadDB" 
		android:orderInCategory="100" 
		android:showAsAction="never" 
		android:title="@string/action_uploadDB" />
    
	
    <item android:id="@+id/action_downloadDB" 
		android:orderInCategory="100" 
		android:showAsAction="never" 
		android:title="@string/action_downloadDB" />

	
    <item android:id="@+id/action_downloadDBfull" 
		android:orderInCategory="100" 
		android:showAsAction="never" 
		android:title="@string/action_downloadDBfull" />
        	
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upload"/>    

    <item
        android:id="@+id/action_sync_db"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sync_db"/>
    
    
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sync"/>

    
    <item
        android:id="@+id/action_readfileDBlocal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_readfileDBlocal"/>

   	
    <item
        android:id="@+id/action_readfileDBfull"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_readfileDBfull"/>
    
    <item
        android:id="@+id/action_authDropbox"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_authDropbox_login"/>
    
   	
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    

</menu>
